nim-llms/huggingface/1_basic/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama-3-1-8b-instruct
  labels:
    app: llama-3-1-8b-instruct
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llama-3-1-8b-instruct
  template:
    metadata:
      labels:
        app: llama-3-1-8b-instruct
    spec:
      imagePullSecrets:
        - name: docker-secret
      volumes:
        - name: model-volume
          persistentVolumeClaim:
            claimName: llama-3-1-8b-instruct
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: "16Gi"
      serviceAccountName: default
      containers:
        - name: llama-3-1-8b-instruct
          image: 'registry.redhat.io/rhaiis/vllm-cuda-rhel9@sha256:a6645a8e8d7928dce59542c362caf11eca94bb1b427390e78f0f8a87912041cd'
          imagePullPolicy: IfNotPresent
          command:
            - python
            - '-m'
            - vllm.entrypoints.openai.api_server
          args:
            - '--port=8000'
            - '--served-model-name=meta-llama/Llama-3.1-8B-Instruct'
            - '--tensor-parallel-size=1'
            - '--model=meta-llama/Llama-3.1-8B-Instruct'
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            limits:
              cpu: '8'
              memory: 32Gi
              nvidia.com/gpu: '1'
            requests:
              cpu: '2'
              memory: 16Gi
              nvidia.com/gpu: '1'
          volumeMounts:
            - name: model-volume
              mountPath: /opt/app-root/src/.cache
            - name: shm
              mountPath: /dev/shm
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 120
      restartPolicy: Always
      tolerations:
        - effect: NoSchedule
          key: g6e-gpu
          operator: Exists
