nim-llms/huggingface/1_basic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-3-1-8b-instruct
spec:
  selector:
    app: llama-3-1-8b-instruct
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
