nim-llms/huggingface/1_basic/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: llama-3-1-8b-instruct
spec:
  to:
    kind: Service
    name: llama-3-1-8b-instruct
  port:
    targetPort: http
